[package]
name = "server"
version = "0.1.0"
authors = ["0xDEADC0DEx <48600374+0xDEADC0DEx@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
hyper = "0.14"
kuchiki = "0.8.1"
