[package]
name = "what"
version = "0.2.0"
authors = ["0xDEADC0DEx <48600374+0xDEADC0DEx@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
hyper = "0.14"
kuchiki = "0.8.1"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.7.3"
